--- a/Presentation/FiveOursInterface/FiveOursInterface/GameWindow.xaml
+++ b/Presentation/FiveOursInterface/FiveOursInterface/GameWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:FiveOursInterface"
         mc:Ignorable="d"
         Title="GameWindow" Height="500" Width="500" MinHeight="500" MinWidth="500">
-    <Grid>
+    <Grid x:Name="grid">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
@@ -25,21 +25,21 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Button Grid.Column="1" Grid.Row="2" Style="{StaticResource gameButton}" Content="1"></Button>
-        <Button Grid.Column="2" Grid.Row="2" Style="{StaticResource gameButton}" Content="2"></Button>
-        <Button Grid.Column="3" Grid.Row="2" Style="{StaticResource gameButton}" Content="3"></Button>
-        <Button Grid.Column="4" Grid.Row="2" Style="{StaticResource gameButton}" Content="4"></Button>
-        <Button Grid.Column="1" Grid.Row="3" Style="{StaticResource gameButton}" Content="5"></Button>
-        <Button Grid.Column="2" Grid.Row="3" Style="{StaticResource gameButton}" Content="6"></Button>
-        <Button Grid.Column="3" Grid.Row="3" Style="{StaticResource gameButton}" Content="7"></Button>
-        <Button Grid.Column="4" Grid.Row="3" Style="{StaticResource gameButton}" Content="8"></Button>
-        <Button Grid.Column="1" Grid.Row="4" Style="{StaticResource gameButton}" Content="9"></Button>
-        <Button Grid.Column="2" Grid.Row="4" Style="{StaticResource gameButton}" Content="10"></Button>
-        <Button Grid.Column="3" Grid.Row="4" Style="{StaticResource gameButton}" Content="11"></Button>
-        <Button Grid.Column="4" Grid.Row="4" Style="{StaticResource gameButton}" Content="12"></Button>
-        <Button Grid.Column="1" Grid.Row="5" Style="{StaticResource gameButton}" Content="13"></Button>
-        <Button Grid.Column="2" Grid.Row="5" Style="{StaticResource gameButton}" Content="14"></Button>
-        <Button Grid.Column="3" Grid.Row="5" Style="{StaticResource gameButton}" Content="15"></Button>
+        <local:GameButton Grid.Column="1" Grid.Row="2" Style="{StaticResource gameButton}" Click="Button_Click" Content="1"></local:GameButton>
+        <local:GameButton Grid.Column="2" Grid.Row="2" Style="{StaticResource gameButton}" Click="Button_Click" Content="2"></local:GameButton>
+        <local:GameButton Grid.Column="3" Grid.Row="2" Style="{StaticResource gameButton}" Click="Button_Click" Content="3"></local:GameButton>
+        <local:GameButton Grid.Column="4" Grid.Row="2" Style="{StaticResource gameButton}" Click="Button_Click" Content="4"></local:GameButton>
+        <local:GameButton Grid.Column="1" Grid.Row="3" Style="{StaticResource gameButton}" Click="Button_Click" Content="5"></local:GameButton>
+        <local:GameButton Grid.Column="2" Grid.Row="3" Style="{StaticResource gameButton}" Click="Button_Click" Content="6"></local:GameButton>
+        <local:GameButton Grid.Column="3" Grid.Row="3" Style="{StaticResource gameButton}" Click="Button_Click" Content="7"></local:GameButton>
+        <local:GameButton Grid.Column="4" Grid.Row="3" Style="{StaticResource gameButton}" Click="Button_Click" Content="8"></local:GameButton>
+        <local:GameButton Grid.Column="1" Grid.Row="4" Style="{StaticResource gameButton}" Click="Button_Click" Content="9"></local:GameButton>
+        <local:GameButton Grid.Column="2" Grid.Row="4" Style="{StaticResource gameButton}" Click="Button_Click" Content="10"></local:GameButton>
+        <local:GameButton Grid.Column="3" Grid.Row="4" Style="{StaticResource gameButton}" Click="Button_Click" Content="11"></local:GameButton>
+        <local:GameButton Grid.Column="4" Grid.Row="4" Style="{StaticResource gameButton}" Click="Button_Click" Content="12"></local:GameButton>
+        <local:GameButton Grid.Column="1" Grid.Row="5" Style="{StaticResource gameButton}" Click="Button_Click" Content="13"></local:GameButton>
+        <local:GameButton Grid.Column="2" Grid.Row="5" Style="{StaticResource gameButton}" Click="Button_Click" Content="14"></local:GameButton>
+        <local:GameButton Grid.Column="3" Grid.Row="5" Style="{StaticResource gameButton}" Click="Button_Click" Content="15"></local:GameButton>
 
         <Label x:Name="labelTimer" Grid.Column="1" Grid.Row="1" Style="{StaticResource timerLabel}"></Label>
         <Label x:Name="counterLabel" Grid.Column="4" Grid.Row="1" Style="{StaticResource counterLabel}"></Label>
