--- a/Presentation/FiveOursInterface/FiveOursInterface/PlayerNameDialog.xaml
+++ b/Presentation/FiveOursInterface/FiveOursInterface/PlayerNameDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FiveOursInterface"
         mc:Ignorable="d"
-        Title="PlayerNameDialog" Height="280" Width="500" MinHeight="280" MinWidth="500">
+        Title="Player name" Height="280" Width="500" MinHeight="280" MinWidth="500">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -23,7 +23,7 @@
         </Grid.ColumnDefinitions>
 
         <Label Content="Enter your name: " Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" FontSize="32"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" Margin="10 10 10 10"/>
+        <TextBox x:Name="textBoxPlayerName" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" Margin="10 10 10 10"/>
         <Button Grid.Row="3" Grid.Column="1" Margin="10 10 10 15" Content="Ok" Click="OkBtnClick"/>
         <Button Grid.Row="3" Grid.Column="3" Margin="10 10 10 15" Content="Cancel" Click="CancelBtnClick"/>
     </Grid>
