--- a/Presentation/FiveOursInterface/FiveOursInterface/MainWindow.xaml
+++ b/Presentation/FiveOursInterface/FiveOursInterface/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:FiveOursInterface"
         mc:Ignorable="d"
         Title="FiveOurs" Height="450" Width="400" MinHeight="450" MinWidth="400">
-    <Grid>
+    <Grid Background="#FFF1F4F7">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
@@ -16,14 +16,14 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Button Grid.Column="0" Grid.Row="1" Content="Fast Game" Style="{StaticResource menuButton}" Click="FastGameBtnClick"/>
-        <Button Grid.Column="2" Grid.Row="1" Content="Sign up &amp; Play" Style="{StaticResource menuButton}" Click="NotFastGameBtnClick"/>
-        <Button Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Content="Results" Style="{StaticResource menuButton}" Click="ResultsBtnClick"/>
+        <Button Grid.Column="0" Grid.Row="1" Content="Fast Game" Style="{StaticResource menuButton}" Click="FastGameBtnClick" Background="#FFDBE7F7"/>
+        <Button Grid.Column="2" Grid.Row="1" Content="Sign up &amp; Play" Style="{StaticResource menuButton}" Click="NotFastGameBtnClick" FontSize="15" Background="#FFDBE7F7"/>
+        <Button Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Content="Results" Style="{StaticResource menuButton}" Click="ResultsBtnClick" Background="#FFDBE7F7"/>
         <TextBlock Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Style="{StaticResource textLogo}">
             <TextBlock.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black"/>
-                    <GradientStop Color="#FFAC9507" Offset="1"/>
+                    <GradientStop Color="#FF879CB2" Offset="1"/>
                 </LinearGradientBrush>
             </TextBlock.Foreground>
         </TextBlock>
