--- a/Presentation/FiveOursInterface/FiveOursInterface/PlayerNameDialog.xaml
+++ b/Presentation/FiveOursInterface/FiveOursInterface/PlayerNameDialog.xaml
@@ -24,7 +24,44 @@
 
         <Label Content="Enter your name: " Grid.Row="1" Grid.ColumnSpan="4" FontSize="24" FontFamily="OCR A Extended" Margin="27,4,73,47" Grid.RowSpan="2" Grid.Column="1"/>
         <TextBox x:Name="textBoxPlayerName" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" Margin="10 10 10 10" BorderBrush="#FFC4C9D8"/>
-        <Button IsDefault="True" Grid.Row="3" Grid.Column="1" Margin="10,18,10,7" Content="Ok" Click="OkBtnClick" FontFamily="OCR A Extended" FontSize="18" Background="#FF758DA8" BorderBrush="#FF7B84AE"/>
-        <Button IsCancel="True" Grid.Row="3" Grid.Column="3" Margin="10,18,10,7" Content="Cancel" FontFamily="OCR A Extended" FontSize="16" Background="#FF758DA8" BorderBrush="#FF7B84AE"/>
+        <Button IsDefault="True" Grid.Row="3" Grid.Column="1" Margin="10,27,14,0" Content="Ok" Click="OkBtnClick" FontFamily="OCR A Extended" FontSize="18" Background="#FF758DA8" BorderBrush="#FF7B84AE" RenderTransformOrigin="0.687,1.208">
+            <Button.Triggers>
+                <EventTrigger RoutedEvent="Button.MouseEnter">
+                    <BeginStoryboard>
+                        <Storyboard >
+                            <DoubleAnimation Duration="0:0:0.2" To="0.4" Storyboard.TargetProperty="Opacity"/>
+                       </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+                <EventTrigger RoutedEvent="Button.MouseLeave">
+                    <BeginStoryboard>
+                        <Storyboard >
+                            <DoubleAnimation Duration="0:0:0.2" To="1" Storyboard.TargetProperty="Opacity"/>
+                            
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+            </Button.Triggers>
+        </Button>
+        <Button IsCancel="True" Grid.Row="3" Grid.Column="3" Margin="12,27,12,0" Content="Cancel" FontFamily="OCR A Extended" FontSize="16" Background="#FF758DA8" BorderBrush="#FF7B84AE">
+            <Button.Triggers>
+                <EventTrigger RoutedEvent="Button.MouseEnter">
+                    <BeginStoryboard>
+                        <Storyboard >
+                            <DoubleAnimation Duration="0:0:0.2" To="0.4" Storyboard.TargetProperty="Opacity"/>
+                           
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+                <EventTrigger RoutedEvent="Button.MouseLeave">
+                    <BeginStoryboard>
+                        <Storyboard >
+                            <DoubleAnimation Duration="0:0:0.2" To="1" Storyboard.TargetProperty="Opacity"/>
+                           
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+            </Button.Triggers>
+        </Button>
     </Grid>
 </Window>
